fl_parser.output
State 14 conflicts: 1 shift/reduce
State 43 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program_decl type_decl var_decl subroutine_list body '.'

    2 program_decl: KW_PROGRAM IDENT ';'

    3 body: KW_BEGIN statements KW_END

    4 statements: %empty
    5           | statement_list

    6 statement_list: statement
    7               | statement_list ';' statement

    8 statement: instruction

    9 proc_call: IDENT '(' arguments ')'

   10 arguments: %empty
   11          | arglist

   12 arglist: expression
   13        | arglist ',' expression

   14 expression: POSINT
   15           | REAL
   16           | IDENT
   17           | KW_TRUE
   18           | KW_FALSE
   19           | STRING
   20           | '(' expression ')'
   21           | CAST_INTEGER expression
   22           | CAST_BOOLEAN expression
   23           | CAST_CHAR expression
   24           | CAST_REAL expression
   25           | expression '+' expression
   26           | expression '-' expression
   27           | expression '*' expression
   28           | expression '/' expression
   29           | expression KW_DIV expression
   30           | expression KW_MOD expression
   31           | KW_NOT expression
   32           | '-' expression
   33           | '+' expression
   34           | expression '=' expression
   35           | expression OP_INEQUAL expression
   36           | expression '<' expression
   37           | expression '>' expression
   38           | expression OP_LESSEQ expression
   39           | expression OP_GREATEREQ expression
   40           | expression KW_AND expression
   41           | expression KW_OR expression
   42           | proc_call
   43           | array_call

   44 data_type: KW_INTEGER
   45          | KW_BOOLEAN
   46          | KW_CHAR
   47          | KW_REAL
   48          | array_decl
   49          | func_data_type
   50          | IDENT

   51 func_data_type: KW_FUNCTION '(' var_decl_list ')' ':' data_type

   52 var_decl: %empty
   53         | KW_VAR var_decl_list ';'

   54 var_decl_list: var_ident ':' data_type
   55              | var_decl_list ';' var_decl_list

   56 var_ident: IDENT
   57          | IDENT ',' var_ident

   58 array_decl: KW_ARRAY array_size KW_OF data_type

   59 array_size: %empty
   60           | '[' expression ']' array_size

   61 array_call: IDENT array_call_size

   62 array_call_size: '[' expression ']' array_size

   63 type_decl: %empty
   64          | KW_TYPE type_decl_list

   65 type_decl_list: IDENT '=' data_type ';'
   66               | type_decl_list type_decl_list

   67 subroutine_list: %empty
   68                | subroutine_list subroutine

   69 subroutine: subroutine_decl type_decl var_decl subroutine_list body ';'

   70 subroutine_decl: KW_PROCEDURE IDENT '(' var_decl_list ')' ';'
   71                | KW_PROCEDURE IDENT '(' ')' ';'
   72                | KW_FUNCTION IDENT '(' var_decl_list ')' ':' data_type ';'
   73                | KW_FUNCTION IDENT '(' ')' ':' data_type ';'

   74 instruction: body
   75            | IDENT ASSIGN expression
   76            | KW_RESULT ASSIGN expression
   77            | KW_IF expression KW_THEN instruction
   78            | KW_IF expression KW_THEN instruction KW_ELSE instruction
   79            | KW_FOR IDENT ASSIGN expression KW_TO expression KW_DO instruction
   80            | KW_FOR IDENT ASSIGN expression KW_DOWNTO expression KW_DO instruction
   81            | KW_WHILE expression KW_DO instruction
   82            | KW_REPEAT instruction KW_UNTIL expression
   83            | IDENT ':' instruction
   84            | KW_GOTO IDENT
   85            | KW_RETURN
   86            | proc_call


Terminals, with rules where they appear

$end (0) 0
'(' (40) 9 20 51 70 71 72 73
')' (41) 9 20 51 70 71 72 73
'*' (42) 27
'+' (43) 25 33
',' (44) 13 57
'-' (45) 26 32
'.' (46) 1
'/' (47) 28
':' (58) 51 54 72 73 83
';' (59) 2 7 53 55 65 69 70 71 72 73
'<' (60) 36
'=' (61) 34 65
'>' (62) 37
'[' (91) 60 62
']' (93) 60 62
error (256)
IDENT (258) 2 9 16 50 56 57 61 65 70 71 72 73 75 79 80 83 84
POSINT (259) 14
REAL (260) 15
STRING (261) 19
KW_PROGRAM (262) 2
KW_BEGIN (263) 3
KW_END (264) 3
KW_AND (265) 40
KW_DIV (266) 29
KW_FUNCTION (267) 51 72 73
KW_MOD (268) 30
KW_PROCEDURE (269) 70 71
KW_RESULT (270) 76
KW_ARRAY (271) 58
KW_DO (272) 79 80 81
KW_GOTO (273) 84
KW_NOT (274) 31
KW_RETURN (275) 85
KW_BOOLEAN (276) 45
KW_ELSE (277) 78
KW_IF (278) 77 78
KW_OF (279) 58
KW_REAL (280) 47
KW_THEN (281) 77 78
KW_CHAR (282) 46
KW_FOR (283) 79 80
KW_INTEGER (284) 44
KW_OR (285) 41
KW_REPEAT (286) 82
KW_UNTIL (287) 82
KW_VAR (288) 53
KW_WHILE (289) 81
KW_TO (290) 79
KW_DOWNTO (291) 80
KW_TYPE (292) 64
KW_TRUE (293) 17
KW_FALSE (294) 18
CAST_INTEGER (295) 21
CAST_BOOLEAN (296) 22
CAST_CHAR (297) 23
CAST_REAL (298) 24
OP_INEQUAL (299) 35
OP_LESSEQ (300) 38
OP_GREATEREQ (301) 39
ASSIGN (302) 75 76 79 80
UMINUS (303)
UPLUS (304)


Nonterminals, with rules where they appear

$accept (65)
    on left: 0
program (66)
    on left: 1, on right: 0
program_decl (67)
    on left: 2, on right: 1
body (68)
    on left: 3, on right: 1 69 74
statements (69)
    on left: 4 5, on right: 3
statement_list (70)
    on left: 6 7, on right: 5 7
statement (71)
    on left: 8, on right: 6 7
proc_call (72)
    on left: 9, on right: 42 86
arguments (73)
    on left: 10 11, on right: 9
arglist (74)
    on left: 12 13, on right: 11 13
expression (75)
    on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31
    32 33 34 35 36 37 38 39 40 41 42 43, on right: 12 13 20 21 22 23
    24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 60 62 75
    76 77 78 79 80 81 82
data_type (76)
    on left: 44 45 46 47 48 49 50, on right: 51 54 58 65 72 73
func_data_type (77)
    on left: 51, on right: 49
var_decl (78)
    on left: 52 53, on right: 1 69
var_decl_list (79)
    on left: 54 55, on right: 51 53 55 70 72
var_ident (80)
    on left: 56 57, on right: 54 57
array_decl (81)
    on left: 58, on right: 48
array_size (82)
    on left: 59 60, on right: 58 60 62
array_call (83)
    on left: 61, on right: 43
array_call_size (84)
    on left: 62, on right: 61
type_decl (85)
    on left: 63 64, on right: 1 69
type_decl_list (86)
    on left: 65 66, on right: 64 66
subroutine_list (87)
    on left: 67 68, on right: 1 68 69
subroutine (88)
    on left: 69, on right: 68
subroutine_decl (89)
    on left: 70 71 72 73, on right: 69
instruction (90)
    on left: 74 75 76 77 78 79 80 81 82 83 84 85 86, on right: 8 77
    78 79 80 81 82 83


State 0

    0 $accept: . program $end
    1 program: . program_decl type_decl var_decl subroutine_list body '.'
    2 program_decl: . KW_PROGRAM IDENT ';'

    KW_PROGRAM  shift, and go to state 1

    program       go to state 2
    program_decl  go to state 3


State 1

    2 program_decl: KW_PROGRAM . IDENT ';'

    IDENT  shift, and go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    1 program: program_decl . type_decl var_decl subroutine_list body '.'
   63 type_decl: . %empty  [KW_BEGIN, KW_FUNCTION, KW_PROCEDURE, KW_VAR]
   64          | . KW_TYPE type_decl_list

    KW_TYPE  shift, and go to state 6

    $default  reduce using rule 63 (type_decl)

    type_decl  go to state 7


State 4

    2 program_decl: KW_PROGRAM IDENT . ';'

    ';'  shift, and go to state 8


State 5

    0 $accept: program $end .

    $default  accept


State 6

   64 type_decl: KW_TYPE . type_decl_list
   65 type_decl_list: . IDENT '=' data_type ';'
   66               | . type_decl_list type_decl_list

    IDENT  shift, and go to state 9

    type_decl_list  go to state 10


State 7

    1 program: program_decl type_decl . var_decl subroutine_list body '.'
   52 var_decl: . %empty  [KW_BEGIN, KW_FUNCTION, KW_PROCEDURE]
   53         | . KW_VAR var_decl_list ';'

    KW_VAR  shift, and go to state 11

    $default  reduce using rule 52 (var_decl)

    var_decl  go to state 12


State 8

    2 program_decl: KW_PROGRAM IDENT ';' .

    $default  reduce using rule 2 (program_decl)


State 9

   65 type_decl_list: IDENT . '=' data_type ';'

    '='  shift, and go to state 13


State 10

   64 type_decl: KW_TYPE type_decl_list .  [KW_BEGIN, KW_FUNCTION, KW_PROCEDURE, KW_VAR]
   65 type_decl_list: . IDENT '=' data_type ';'
   66               | . type_decl_list type_decl_list
   66               | type_decl_list . type_decl_list

    IDENT  shift, and go to state 9

    $default  reduce using rule 64 (type_decl)

    type_decl_list  go to state 14


State 11

   53 var_decl: KW_VAR . var_decl_list ';'
   54 var_decl_list: . var_ident ':' data_type
   55              | . var_decl_list ';' var_decl_list
   56 var_ident: . IDENT
   57          | . IDENT ',' var_ident

    IDENT  shift, and go to state 15

    var_decl_list  go to state 16
    var_ident      go to state 17


State 12

    1 program: program_decl type_decl var_decl . subroutine_list body '.'
   67 subroutine_list: . %empty
   68                | . subroutine_list subroutine

    $default  reduce using rule 67 (subroutine_list)

    subroutine_list  go to state 18


State 13

   44 data_type: . KW_INTEGER
   45          | . KW_BOOLEAN
   46          | . KW_CHAR
   47          | . KW_REAL
   48          | . array_decl
   49          | . func_data_type
   50          | . IDENT
   51 func_data_type: . KW_FUNCTION '(' var_decl_list ')' ':' data_type
   58 array_decl: . KW_ARRAY array_size KW_OF data_type
   65 type_decl_list: IDENT '=' . data_type ';'

    IDENT        shift, and go to state 19
    KW_FUNCTION  shift, and go to state 20
    KW_ARRAY     shift, and go to state 21
    KW_BOOLEAN   shift, and go to state 22
    KW_REAL      shift, and go to state 23
    KW_CHAR      shift, and go to state 24
    KW_INTEGER   shift, and go to state 25

    data_type       go to state 26
    func_data_type  go to state 27
    array_decl      go to state 28


State 14

   65 type_decl_list: . IDENT '=' data_type ';'
   66               | . type_decl_list type_decl_list
   66               | type_decl_list . type_decl_list
   66               | type_decl_list type_decl_list .  [IDENT, KW_BEGIN, KW_FUNCTION, KW_PROCEDURE, KW_VAR]

    IDENT  shift, and go to state 9

    IDENT     [reduce using rule 66 (type_decl_list)]
    $default  reduce using rule 66 (type_decl_list)

    type_decl_list  go to state 14


State 15

   56 var_ident: IDENT .  [':']
   57          | IDENT . ',' var_ident

    ','  shift, and go to state 29

    $default  reduce using rule 56 (var_ident)


State 16

   53 var_decl: KW_VAR var_decl_list . ';'
   55 var_decl_list: var_decl_list . ';' var_decl_list

    ';'  shift, and go to state 30


State 17

   54 var_decl_list: var_ident . ':' data_type

    ':'  shift, and go to state 31


State 18

    1 program: program_decl type_decl var_decl subroutine_list . body '.'
    3 body: . KW_BEGIN statements KW_END
   68 subroutine_list: subroutine_list . subroutine
   69 subroutine: . subroutine_decl type_decl var_decl subroutine_list body ';'
   70 subroutine_decl: . KW_PROCEDURE IDENT '(' var_decl_list ')' ';'
   71                | . KW_PROCEDURE IDENT '(' ')' ';'
   72                | . KW_FUNCTION IDENT '(' var_decl_list ')' ':' data_type ';'
   73                | . KW_FUNCTION IDENT '(' ')' ':' data_type ';'

    KW_BEGIN      shift, and go to state 32
    KW_FUNCTION   shift, and go to state 33
    KW_PROCEDURE  shift, and go to state 34

    body             go to state 35
    subroutine       go to state 36
    subroutine_decl  go to state 37


State 19

   50 data_type: IDENT .

    $default  reduce using rule 50 (data_type)


State 20

   51 func_data_type: KW_FUNCTION . '(' var_decl_list ')' ':' data_type

    '('  shift, and go to state 38


State 21

   58 array_decl: KW_ARRAY . array_size KW_OF data_type
   59 array_size: . %empty  [KW_OF]
   60           | . '[' expression ']' array_size

    '['  shift, and go to state 39

    $default  reduce using rule 59 (array_size)

    array_size  go to state 40


State 22

   45 data_type: KW_BOOLEAN .

    $default  reduce using rule 45 (data_type)


State 23

   47 data_type: KW_REAL .

    $default  reduce using rule 47 (data_type)


State 24

   46 data_type: KW_CHAR .

    $default  reduce using rule 46 (data_type)


State 25

   44 data_type: KW_INTEGER .

    $default  reduce using rule 44 (data_type)


State 26

   65 type_decl_list: IDENT '=' data_type . ';'

    ';'  shift, and go to state 41


State 27

   49 data_type: func_data_type .

    $default  reduce using rule 49 (data_type)


State 28

   48 data_type: array_decl .

    $default  reduce using rule 48 (data_type)


State 29

   56 var_ident: . IDENT
   57          | . IDENT ',' var_ident
   57          | IDENT ',' . var_ident

    IDENT  shift, and go to state 15

    var_ident  go to state 42


State 30

   53 var_decl: KW_VAR var_decl_list ';' .  [KW_BEGIN, KW_FUNCTION, KW_PROCEDURE]
   54 var_decl_list: . var_ident ':' data_type
   55              | . var_decl_list ';' var_decl_list
   55              | var_decl_list ';' . var_decl_list
   56 var_ident: . IDENT
   57          | . IDENT ',' var_ident

    IDENT  shift, and go to state 15

    $default  reduce using rule 53 (var_decl)

    var_decl_list  go to state 43
    var_ident      go to state 17


State 31

   44 data_type: . KW_INTEGER
   45          | . KW_BOOLEAN
   46          | . KW_CHAR
   47          | . KW_REAL
   48          | . array_decl
   49          | . func_data_type
   50          | . IDENT
   51 func_data_type: . KW_FUNCTION '(' var_decl_list ')' ':' data_type
   54 var_decl_list: var_ident ':' . data_type
   58 array_decl: . KW_ARRAY array_size KW_OF data_type

    IDENT        shift, and go to state 19
    KW_FUNCTION  shift, and go to state 20
    KW_ARRAY     shift, and go to state 21
    KW_BOOLEAN   shift, and go to state 22
    KW_REAL      shift, and go to state 23
    KW_CHAR      shift, and go to state 24
    KW_INTEGER   shift, and go to state 25

    data_type       go to state 44
    func_data_type  go to state 27
    array_decl      go to state 28


State 32

    3 body: . KW_BEGIN statements KW_END
    3     | KW_BEGIN . statements KW_END
    4 statements: . %empty  [KW_END]
    5           | . statement_list
    6 statement_list: . statement
    7               | . statement_list ';' statement
    8 statement: . instruction
    9 proc_call: . IDENT '(' arguments ')'
   74 instruction: . body
   75            | . IDENT ASSIGN expression
   76            | . KW_RESULT ASSIGN expression
   77            | . KW_IF expression KW_THEN instruction
   78            | . KW_IF expression KW_THEN instruction KW_ELSE instruction
   79            | . KW_FOR IDENT ASSIGN expression KW_TO expression KW_DO instruction
   80            | . KW_FOR IDENT ASSIGN expression KW_DOWNTO expression KW_DO instruction
   81            | . KW_WHILE expression KW_DO instruction
   82            | . KW_REPEAT instruction KW_UNTIL expression
   83            | . IDENT ':' instruction
   84            | . KW_GOTO IDENT
   85            | . KW_RETURN
   86            | . proc_call

    IDENT      shift, and go to state 45
    KW_BEGIN   shift, and go to state 32
    KW_RESULT  shift, and go to state 46
    KW_GOTO    shift, and go to state 47
    KW_RETURN  shift, and go to state 48
    KW_IF      shift, and go to state 49
    KW_FOR     shift, and go to state 50
    KW_REPEAT  shift, and go to state 51
    KW_WHILE   shift, and go to state 52

    $default  reduce using rule 4 (statements)

    body            go to state 53
    statements      go to state 54
    statement_list  go to state 55
    statement       go to state 56
    proc_call       go to state 57
    instruction     go to state 58


State 33

   72 subroutine_decl: KW_FUNCTION . IDENT '(' var_decl_list ')' ':' data_type ';'
   73                | KW_FUNCTION . IDENT '(' ')' ':' data_type ';'

    IDENT  shift, and go to state 59


State 34

   70 subroutine_decl: KW_PROCEDURE . IDENT '(' var_decl_list ')' ';'
   71                | KW_PROCEDURE . IDENT '(' ')' ';'

    IDENT  shift, and go to state 60


State 35

    1 program: program_decl type_decl var_decl subroutine_list body . '.'

    '.'  shift, and go to state 61


State 36

   68 subroutine_list: subroutine_list subroutine .

    $default  reduce using rule 68 (subroutine_list)


State 37

   63 type_decl: . %empty  [KW_BEGIN, KW_FUNCTION, KW_PROCEDURE, KW_VAR]
   64          | . KW_TYPE type_decl_list
   69 subroutine: subroutine_decl . type_decl var_decl subroutine_list body ';'

    KW_TYPE  shift, and go to state 6

    $default  reduce using rule 63 (type_decl)

    type_decl  go to state 62


State 38

   51 func_data_type: KW_FUNCTION '(' . var_decl_list ')' ':' data_type
   54 var_decl_list: . var_ident ':' data_type
   55              | . var_decl_list ';' var_decl_list
   56 var_ident: . IDENT
   57          | . IDENT ',' var_ident

    IDENT  shift, and go to state 15

    var_decl_list  go to state 63
    var_ident      go to state 17


State 39

    9 proc_call: . IDENT '(' arguments ')'
   14 expression: . POSINT
   15           | . REAL
   16           | . IDENT
   17           | . KW_TRUE
   18           | . KW_FALSE
   19           | . STRING
   20           | . '(' expression ')'
   21           | . CAST_INTEGER expression
   22           | . CAST_BOOLEAN expression
   23           | . CAST_CHAR expression
   24           | . CAST_REAL expression
   25           | . expression '+' expression
   26           | . expression '-' expression
   27           | . expression '*' expression
   28           | . expression '/' expression
   29           | . expression KW_DIV expression
   30           | . expression KW_MOD expression
   31           | . KW_NOT expression
   32           | . '-' expression
   33           | . '+' expression
   34           | . expression '=' expression
   35           | . expression OP_INEQUAL expression
   36           | . expression '<' expression
   37           | . expression '>' expression
   38           | . expression OP_LESSEQ expression
   39           | . expression OP_GREATEREQ expression
   40           | . expression KW_AND expression
   41           | . expression KW_OR expression
   42           | . proc_call
   43           | . array_call
   60 array_size: '[' . expression ']' array_size
   61 array_call: . IDENT array_call_size

    IDENT         shift, and go to state 64
    POSINT        shift, and go to state 65
    REAL          shift, and go to state 66
    STRING        shift, and go to state 67
    KW_NOT        shift, and go to state 68
    KW_TRUE       shift, and go to state 69
    KW_FALSE      shift, and go to state 70
    CAST_INTEGER  shift, and go to state 71
    CAST_BOOLEAN  shift, and go to state 72
    CAST_CHAR     shift, and go to state 73
    CAST_REAL     shift, and go to state 74
    '-'           shift, and go to state 75
    '+'           shift, and go to state 76
    '('           shift, and go to state 77

    proc_call   go to state 78
    expression  go to state 79
    array_call  go to state 80


State 40

   58 array_decl: KW_ARRAY array_size . KW_OF data_type

    KW_OF  shift, and go to state 81


State 41

   65 type_decl_list: IDENT '=' data_type ';' .

    $default  reduce using rule 65 (type_decl_list)


State 42

   57 var_ident: IDENT ',' var_ident .

    $default  reduce using rule 57 (var_ident)


State 43

   55 var_decl_list: var_decl_list . ';' var_decl_list
   55              | var_decl_list ';' var_decl_list .  [';', ')']

    ';'  shift, and go to state 82

    ';'       [reduce using rule 55 (var_decl_list)]
    $default  reduce using rule 55 (var_decl_list)


State 44

   54 var_decl_list: var_ident ':' data_type .

    $default  reduce using rule 54 (var_decl_list)


State 45

    9 proc_call: IDENT . '(' arguments ')'
   75 instruction: IDENT . ASSIGN expression
   83            | IDENT . ':' instruction

    ASSIGN  shift, and go to state 83
    '('     shift, and go to state 84
    ':'     shift, and go to state 85


State 46

   76 instruction: KW_RESULT . ASSIGN expression

    ASSIGN  shift, and go to state 86


State 47

   84 instruction: KW_GOTO . IDENT

    IDENT  shift, and go to state 87


State 48

   85 instruction: KW_RETURN .

    $default  reduce using rule 85 (instruction)


State 49

    9 proc_call: . IDENT '(' arguments ')'
   14 expression: . POSINT
   15           | . REAL
   16           | . IDENT
   17           | . KW_TRUE
   18           | . KW_FALSE
   19           | . STRING
   20           | . '(' expression ')'
   21           | . CAST_INTEGER expression
   22           | . CAST_BOOLEAN expression
   23           | . CAST_CHAR expression
   24           | . CAST_REAL expression
   25           | . expression '+' expression
   26           | . expression '-' expression
   27           | . expression '*' expression
   28           | . expression '/' expression
   29           | . expression KW_DIV expression
   30           | . expression KW_MOD expression
   31           | . KW_NOT expression
   32           | . '-' expression
   33           | . '+' expression
   34           | . expression '=' expression
   35           | . expression OP_INEQUAL expression
   36           | . expression '<' expression
   37           | . expression '>' expression
   38           | . expression OP_LESSEQ expression
   39           | . expression OP_GREATEREQ expression
   40           | . expression KW_AND expression
   41           | . expression KW_OR expression
   42           | . proc_call
   43           | . array_call
   61 array_call: . IDENT array_call_size
   77 instruction: KW_IF . expression KW_THEN instruction
   78            | KW_IF . expression KW_THEN instruction KW_ELSE instruction

    IDENT         shift, and go to state 64
    POSINT        shift, and go to state 65
    REAL          shift, and go to state 66
    STRING        shift, and go to state 67
    KW_NOT        shift, and go to state 68
    KW_TRUE       shift, and go to state 69
    KW_FALSE      shift, and go to state 70
    CAST_INTEGER  shift, and go to state 71
    CAST_BOOLEAN  shift, and go to state 72
    CAST_CHAR     shift, and go to state 73
    CAST_REAL     shift, and go to state 74
    '-'           shift, and go to state 75
    '+'           shift, and go to state 76
    '('           shift, and go to state 77

    proc_call   go to state 78
    expression  go to state 88
    array_call  go to state 80


State 50

   79 instruction: KW_FOR . IDENT ASSIGN expression KW_TO expression KW_DO instruction
   80            | KW_FOR . IDENT ASSIGN expression KW_DOWNTO expression KW_DO instruction

    IDENT  shift, and go to state 89


State 51

    3 body: . KW_BEGIN statements KW_END
    9 proc_call: . IDENT '(' arguments ')'
   74 instruction: . body
   75            | . IDENT ASSIGN expression
   76            | . KW_RESULT ASSIGN expression
   77            | . KW_IF expression KW_THEN instruction
   78            | . KW_IF expression KW_THEN instruction KW_ELSE instruction
   79            | . KW_FOR IDENT ASSIGN expression KW_TO expression KW_DO instruction
   80            | . KW_FOR IDENT ASSIGN expression KW_DOWNTO expression KW_DO instruction
   81            | . KW_WHILE expression KW_DO instruction
   82            | . KW_REPEAT instruction KW_UNTIL expression
   82            | KW_REPEAT . instruction KW_UNTIL expression
   83            | . IDENT ':' instruction
   84            | . KW_GOTO IDENT
   85            | . KW_RETURN
   86            | . proc_call

    IDENT      shift, and go to state 45
    KW_BEGIN   shift, and go to state 32
    KW_RESULT  shift, and go to state 46
    KW_GOTO    shift, and go to state 47
    KW_RETURN  shift, and go to state 48
    KW_IF      shift, and go to state 49
    KW_FOR     shift, and go to state 50
    KW_REPEAT  shift, and go to state 51
    KW_WHILE   shift, and go to state 52

    body         go to state 53
    proc_call    go to state 57
    instruction  go to state 90


State 52

    9 proc_call: . IDENT '(' arguments ')'
   14 expression: . POSINT
   15           | . REAL
   16           | . IDENT
   17           | . KW_TRUE
   18           | . KW_FALSE
   19           | . STRING
   20           | . '(' expression ')'
   21           | . CAST_INTEGER expression
   22           | . CAST_BOOLEAN expression
   23           | . CAST_CHAR expression
   24           | . CAST_REAL expression
   25           | . expression '+' expression
   26           | . expression '-' expression
   27           | . expression '*' expression
   28           | . expression '/' expression
   29           | . expression KW_DIV expression
   30           | . expression KW_MOD expression
   31           | . KW_NOT expression
   32           | . '-' expression
   33           | . '+' expression
   34           | . expression '=' expression
   35           | . expression OP_INEQUAL expression
   36           | . expression '<' expression
   37           | . expression '>' expression
   38           | . expression OP_LESSEQ expression
   39           | . expression OP_GREATEREQ expression
   40           | . expression KW_AND expression
   41           | . expression KW_OR expression
   42           | . proc_call
   43           | . array_call
   61 array_call: . IDENT array_call_size
   81 instruction: KW_WHILE . expression KW_DO instruction

    IDENT         shift, and go to state 64
    POSINT        shift, and go to state 65
    REAL          shift, and go to state 66
    STRING        shift, and go to state 67
    KW_NOT        shift, and go to state 68
    KW_TRUE       shift, and go to state 69
    KW_FALSE      shift, and go to state 70
    CAST_INTEGER  shift, and go to state 71
    CAST_BOOLEAN  shift, and go to state 72
    CAST_CHAR     shift, and go to state 73
    CAST_REAL     shift, and go to state 74
    '-'           shift, and go to state 75
    '+'           shift, and go to state 76
    '('           shift, and go to state 77

    proc_call   go to state 78
    expression  go to state 91
    array_call  go to state 80


State 53

   74 instruction: body .

    $default  reduce using rule 74 (instruction)


State 54

    3 body: KW_BEGIN statements . KW_END

    KW_END  shift, and go to state 92


State 55

    5 statements: statement_list .  [KW_END]
    7 statement_list: statement_list . ';' statement

    ';'  shift, and go to state 93

    $default  reduce using rule 5 (statements)


State 56

    6 statement_list: statement .

    $default  reduce using rule 6 (statement_list)


State 57

   86 instruction: proc_call .

    $default  reduce using rule 86 (instruction)


State 58

    8 statement: instruction .

    $default  reduce using rule 8 (statement)


State 59

   72 subroutine_decl: KW_FUNCTION IDENT . '(' var_decl_list ')' ':' data_type ';'
   73                | KW_FUNCTION IDENT . '(' ')' ':' data_type ';'

    '('  shift, and go to state 94


State 60

   70 subroutine_decl: KW_PROCEDURE IDENT . '(' var_decl_list ')' ';'
   71                | KW_PROCEDURE IDENT . '(' ')' ';'

    '('  shift, and go to state 95


State 61

    1 program: program_decl type_decl var_decl subroutine_list body '.' .

    $default  reduce using rule 1 (program)


State 62

   52 var_decl: . %empty  [KW_BEGIN, KW_FUNCTION, KW_PROCEDURE]
   53         | . KW_VAR var_decl_list ';'
   69 subroutine: subroutine_decl type_decl . var_decl subroutine_list body ';'

    KW_VAR  shift, and go to state 11

    $default  reduce using rule 52 (var_decl)

    var_decl  go to state 96


State 63

   51 func_data_type: KW_FUNCTION '(' var_decl_list . ')' ':' data_type
   55 var_decl_list: var_decl_list . ';' var_decl_list

    ';'  shift, and go to state 82
    ')'  shift, and go to state 97


State 64

    9 proc_call: IDENT . '(' arguments ')'
   16 expression: IDENT .  [KW_END, KW_AND, KW_DIV, KW_MOD, KW_DO, KW_ELSE, KW_THEN, KW_OR, KW_UNTIL, KW_TO, KW_DOWNTO, OP_INEQUAL, OP_LESSEQ, OP_GREATEREQ, '=', '<', '>', '-', '+', '*', '/', ';', ')', ',', ']']
   61 array_call: IDENT . array_call_size
   62 array_call_size: . '[' expression ']' array_size

    '('  shift, and go to state 84
    '['  shift, and go to state 98

    $default  reduce using rule 16 (expression)

    array_call_size  go to state 99


State 65

   14 expression: POSINT .

    $default  reduce using rule 14 (expression)


State 66

   15 expression: REAL .

    $default  reduce using rule 15 (expression)


State 67

   19 expression: STRING .

    $default  reduce using rule 19 (expression)


State 68

    9 proc_call: . IDENT '(' arguments ')'
   14 expression: . POSINT
   15           | . REAL
   16           | . IDENT
   17           | . KW_TRUE
   18           | . KW_FALSE
   19           | . STRING
   20           | . '(' expression ')'
   21           | . CAST_INTEGER expression
   22           | . CAST_BOOLEAN expression
   23           | . CAST_CHAR expression
   24           | . CAST_REAL expression
   25           | . expression '+' expression
   26           | . expression '-' expression
   27           | . expression '*' expression
   28           | . expression '/' expression
   29           | . expression KW_DIV expression
   30           | . expression KW_MOD expression
   31           | . KW_NOT expression
   31           | KW_NOT . expression
   32           | . '-' expression
   33           | . '+' expression
   34           | . expression '=' expression
   35           | . expression OP_INEQUAL expression
   36           | . expression '<' expression
   37           | . expression '>' expression
   38           | . expression OP_LESSEQ expression
   39           | . expression OP_GREATEREQ expression
   40           | . expression KW_AND expression
   41           | . expression KW_OR expression
   42           | . proc_call
   43           | . array_call
   61 array_call: . IDENT array_call_size

    IDENT         shift, and go to state 64
    POSINT        shift, and go to state 65
    REAL          shift, and go to state 66
    STRING        shift, and go to state 67
    KW_NOT        shift, and go to state 68
    KW_TRUE       shift, and go to state 69
    KW_FALSE      shift, and go to state 70
    CAST_INTEGER  shift, and go to state 71
    CAST_BOOLEAN  shift, and go to state 72
    CAST_CHAR     shift, and go to state 73
    CAST_REAL     shift, and go to state 74
    '-'           shift, and go to state 75
    '+'           shift, and go to state 76
    '('           shift, and go to state 77

    proc_call   go to state 78
    expression  go to state 100
    array_call  go to state 80


State 69

   17 expression: KW_TRUE .

    $default  reduce using rule 17 (expression)


State 70

   18 expression: KW_FALSE .

    $default  reduce using rule 18 (expression)


State 71

    9 proc_call: . IDENT '(' arguments ')'
   14 expression: . POSINT
   15           | . REAL
   16           | . IDENT
   17           | . KW_TRUE
   18           | . KW_FALSE
   19           | . STRING
   20           | . '(' expression ')'
   21           | . CAST_INTEGER expression
   21           | CAST_INTEGER . expression
   22           | . CAST_BOOLEAN expression
   23           | . CAST_CHAR expression
   24           | . CAST_REAL expression
   25           | . expression '+' expression
   26           | . expression '-' expression
   27           | . expression '*' expression
   28           | . expression '/' expression
   29           | . expression KW_DIV expression
   30           | . expression KW_MOD expression
   31           | . KW_NOT expression
   32           | . '-' expression
   33           | . '+' expression
   34           | . expression '=' expression
   35           | . expression OP_INEQUAL expression
   36           | . expression '<' expression
   37           | . expression '>' expression
   38           | . expression OP_LESSEQ expression
   39           | . expression OP_GREATEREQ expression
   40           | . expression KW_AND expression
   41           | . expression KW_OR expression
   42           | . proc_call
   43           | . array_call
   61 array_call: . IDENT array_call_size

    IDENT         shift, and go to state 64
    POSINT        shift, and go to state 65
    REAL          shift, and go to state 66
    STRING        shift, and go to state 67
    KW_NOT        shift, and go to state 68
    KW_TRUE       shift, and go to state 69
    KW_FALSE      shift, and go to state 70
    CAST_INTEGER  shift, and go to state 71
    CAST_BOOLEAN  shift, and go to state 72
    CAST_CHAR     shift, and go to state 73
    CAST_REAL     shift, and go to state 74
    '-'           shift, and go to state 75
    '+'           shift, and go to state 76
    '('           shift, and go to state 77

    proc_call   go to state 78
    expression  go to state 101
    array_call  go to state 80


State 72

    9 proc_call: . IDENT '(' arguments ')'
   14 expression: . POSINT
   15           | . REAL
   16           | . IDENT
   17           | . KW_TRUE
   18           | . KW_FALSE
   19           | . STRING
   20           | . '(' expression ')'
   21           | . CAST_INTEGER expression
   22           | . CAST_BOOLEAN expression
   22           | CAST_BOOLEAN . expression
   23           | . CAST_CHAR expression
   24           | . CAST_REAL expression
   25           | . expression '+' expression
   26           | . expression '-' expression
   27           | . expression '*' expression
   28           | . expression '/' expression
   29           | . expression KW_DIV expression
   30           | . expression KW_MOD expression
   31           | . KW_NOT expression
   32           | . '-' expression
   33           | . '+' expression
   34           | . expression '=' expression
   35           | . expression OP_INEQUAL expression
   36           | . expression '<' expression
   37           | . expression '>' expression
   38           | . expression OP_LESSEQ expression
   39           | . expression OP_GREATEREQ expression
   40           | . expression KW_AND expression
   41           | . expression KW_OR expression
   42           | . proc_call
   43           | . array_call
   61 array_call: . IDENT array_call_size

    IDENT         shift, and go to state 64
    POSINT        shift, and go to state 65
    REAL          shift, and go to state 66
    STRING        shift, and go to state 67
    KW_NOT        shift, and go to state 68
    KW_TRUE       shift, and go to state 69
    KW_FALSE      shift, and go to state 70
    CAST_INTEGER  shift, and go to state 71
    CAST_BOOLEAN  shift, and go to state 72
    CAST_CHAR     shift, and go to state 73
    CAST_REAL     shift, and go to state 74
    '-'           shift, and go to state 75
    '+'           shift, and go to state 76
    '('           shift, and go to state 77

    proc_call   go to state 78
    expression  go to state 102
    array_call  go to state 80


State 73
